go言語ページ公開

--- a/index.html
+++ b/index.html
@@ -1,11 +1,99 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>EMA</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Muli:800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet"></head>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
 <body>
-    aaaaaa
+<div class="wrap">
+    <nav>
+        <div class="navwrap">
+            <h1 class="site-title">EMA
+                <span>GO言語学習サイト</span>
+            </h1>
+            <div class="navsearch">
+                <form id="form1" action="自分のサイトURL" method="get">
+                    <input class="search" id="s" name="s" type="text" placeholder="キーワードを入力" />
+                    <button type="submit" class="search-btn"><i class="fa fa-search" aria-hidden="true"></i></button>
+                </form>
+            </form>
+        </div>
+    </nav>
+    <article class="index index-wrap">
+        <div class="index__title">
+            <h1>
+                Go Intersive Training.
+            </h1>
+            <p>Go言語での高速なサーバーサイドアプリケーションの実装や、コンテナ技術に関して勉強できるサイト。<br>Goを極めて最強のバックエンド/インフラエンジニアになろう:)</p>
+        </div>
+        <ul>
+            <a href="">
+                <li>
+                    <div class="menu-img">
+                        <img src="img/menu-img01.png" alt="">
+                    </div>
+                    <div class="menu-title">
+                        <h2>BASIC</h2>
+                        <div>GO言語の特徴や歴史</div>
+                    </div>
+                </li>
+            </a>
+            <a href="">
+                <li>
+                    <div class="menu-img">
+                        <img src="img/menu-img01.png" alt="">
+                    </div>
+                    <div class="menu-title">
+                        <h2>WEB</h2>
+                        <div>高速WEBアプリケーション</div>
+                    </div>
+                </li>
+            </a>
+            <a href="">
+                <li>
+                    <div class="menu-img">
+                        <img src="img/menu-img01.png" alt="">
+                    </div>
+                    <div class="menu-title">
+                        <h2>CONTAINER</h2>
+                        <div>GOが支えるコンテナ技術</div>
+                    </div>
+                </li>
+            </a>
+        </ul>
+        <a href="">
+            <div class="more-btn">
+                すべてのコンテンツを見る
+            </div>
+        </a>
+    </article>
+    <footer>
+        <ul class="footer-menu">
+            <li><a href="">ABOUT</a></li>
+            <li><a href="">GUIDELINES</a></li>
+            <li><a href="">TEAMS</a></li>
+            <li><a href="">SUPPORT</a></li>
+            <li><a href="">PRIVACY</a></li>
+        </ul>
+
+        <ul class="footer-sns">
+            <li>
+                <a href="">
+                    <img src="img/icon-twitter.svg" alt="">
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="img/icon-fb.svg" alt="">
+                </a>
+            </li>
+        </ul>
+        <small>&copy;2020 EMA.</small>
+    </footer>
+</div>
 </body>
 </html>
